@@ -48,6 +48,7 @@ CHANGELOG Roundcube Webmail
 - Use contact_search_name format in popup on results in compose contacts search
 - Fix handling of 'mailto' and 'error' arguments in message_before_send hook (#5347)
 - Fix missing localization of HTML editor when assets_dir != INSTALL_PATH
+- Fix handling of blockquote tags with mixed case on html2text conversion (#5363)
 
 RELEASE 1.2.0
 -------------
